# Humanoid-Robotic-Course-book

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  AGENTIC_AI_IMPLEMENTATION.md  AGENTIC_REFACTORING_COMPLETE.md  CHATBOT_INTEGRATION.md  CHATWIDGET_VERIFICATION.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FRONTEND_INTEGRATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_QUICK_START.md  PHASE3_TESTING_GUIDE.md  QUICKSTART_CHATWIDGET.md  QUICK_START.md  RAG_CHATBOT_STATUS.md  README.md  SETUP_COMPLETE.md
.github/scripts/: validate_api_examples.py
.github/workflows/: backend-test.yml  deploy-pages.yml  docker-build.yml  frontend-build.yml  validate-code-examples.yml
.specify/memory/: constitution.md
backend/: AGENTIC_RAG_GUIDE.md  AGENTIC_REFACTORING_SUMMARY.md  DATA_INGESTION_GUIDE.md  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  agent.py  api.py  config.py  data_reterive.py  debug_retrieve.py  embeding_helpers.py  ingest.py  main.py  models.py  pyproject.toml  rag_agent.py  receive_data.py  requirements.txt  router.py  server.py  test_agent.py  test_connections.py  test_module1.py  test_qdrant.py  test_retrieve.py
backend/tests/: test_api.py  test_integration.py
docosaurus/: FRONTEND_INTEGRATION.md  Untitled  docusaurus.config.ts  package.json
docusaurus/: .gitignore  docusaurus.config.ts  sidebars.ts  tailwind.config.js
docusaurus/docs/: intro.md
specs/textbook-v1/: plan-v1-base-old.md  (+4 more)
(+34 files in other folders)
